--- a/security/Kconfig
+++ b/security/Kconfig
@@ -183,6 +183,18 @@ config LSM_MMAP_MIN_ADDR
 	  this low address space will need the permission specific to the
 	  systems running LSM.
 
+config CAPSICUM
+	bool "Capsicum capabilities"
+	default y
+	help
+	  This is a special security primitive.  
+	  See http://www.cl.cam.ac.uk/research/security/capsicum/ for more
+	  information.  Currently this is on by default for developement.
+	  
+	  If you are unsure as to whether this is required, answer N.
+
+
+
 source security/selinux/Kconfig
 source security/smack/Kconfig
 source security/tomoyo/Kconfig
